[gd_scene load_steps=9 format=3 uid="uid://bpgkikg2nlrl0"]

[ext_resource type="Script" uid="uid://dffc7i63458mu" path="res://scripts/shared/wave_piece.gd" id="1_cxh0a"]
[ext_resource type="Texture2D" uid="uid://hultiqasvs3r" path="res://assets/art/square_vertical.png" id="2_7v40j"]
[ext_resource type="Script" uid="uid://dmjr68cchwfcq" path="res://scripts/shared/piece_connector.gd" id="3_wttoj"]
[ext_resource type="Shader" uid="uid://bqjm3wygrfa3d" path="res://assets/shaders/neon_glow.gdshader" id="4_6wbc8"]
[ext_resource type="Texture2D" uid="uid://c056xurgjp6cu" path="res://assets/art/glowCircle.png" id="5_g6dxn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fg0o"]
size = Vector2(15, 97)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1fg0o"]
shader = ExtResource("4_6wbc8")
shader_parameter/neon_color = Color(0, 0.8, 1, 1)
shader_parameter/pulse_intensity = 1.0
shader_parameter/glow_radius = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_1m15w"]
radius = 8.0

[node name="WavePiece" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 2
script = ExtResource("1_cxh0a")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Piece" type="Sprite2D" parent="."]
position = Vector2(0.37500954, 0.62498474)
scale = Vector2(0.4236113, 0.42361134)
texture = ExtResource("2_7v40j")

[node name="Wave2DCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.50000954, 0.5000076)
shape = SubResource("RectangleShape2D_1fg0o")

[node name="PieceConnector1" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4
script = ExtResource("3_wttoj")

[node name="Connector" type="Sprite2D" parent="PieceConnector1"]
material = SubResource("ShaderMaterial_1fg0o")
position = Vector2(0.43750954, -46.562492)
scale = Vector2(0.016583346, 0.016583346)
texture = ExtResource("5_g6dxn")

[node name="ConnectorCollision" type="CollisionShape2D" parent="PieceConnector1"]
position = Vector2(0.43750954, -46.562492)
shape = SubResource("CircleShape2D_1m15w")

[node name="Label" type="Label" parent="PieceConnector1"]
visible = false
offset_left = -0.5
offset_top = -50.5
offset_right = 39.5
offset_bottom = -27.5
text = "1"

[node name="PieceConnector2" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4
script = ExtResource("3_wttoj")

[node name="Connector" type="Sprite2D" parent="PieceConnector2"]
material = SubResource("ShaderMaterial_1fg0o")
position = Vector2(0.43750954, 47.437508)
scale = Vector2(0.016583346, 0.016583346)
texture = ExtResource("5_g6dxn")

[node name="ConnectorCollision" type="CollisionShape2D" parent="PieceConnector2"]
position = Vector2(0.43750954, 47.437508)
shape = SubResource("CircleShape2D_1m15w")

[node name="Label" type="Label" parent="PieceConnector2"]
visible = false
offset_left = -3.5
offset_top = 39.5
offset_right = 36.5
offset_bottom = 62.5
text = "2"

[connection signal="input_event" from="." to="." method="_on_wave_piece_input_event"]
[connection signal="area_entered" from="PieceConnector1" to="." method="_on_piece_connector_1_area_entered"]
[connection signal="area_exited" from="PieceConnector1" to="." method="_on_piece_connector_1_area_exited"]
[connection signal="area_entered" from="PieceConnector2" to="." method="_on_piece_connector_2_area_entered"]
[connection signal="area_exited" from="PieceConnector2" to="." method="_on_piece_connector_2_area_exited"]
